// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VPaper.vue should render a tile paper 1`] = `

<div class="v-paper v-paper--tile theme--light">
</div>

`;

exports[`VPaper.vue should render component and match snapshot 1`] = `

<div class="v-paper theme--light">
</div>

`;
